[gd_scene load_steps=9 format=2]

[ext_resource path="res://weapons/bomb/Bomb.gd" type="Script" id=1]
[ext_resource path="res://assets/weapons/bomb/spaceBuilding_006.png" type="Texture" id=2]
[ext_resource path="res://assets/weapons/bomb/star2.png" type="Texture" id=3]
[ext_resource path="res://assets/weapons/bomb/blue-circle-outline-png-2.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 11.5

[sub_resource type="Animation" id=2]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Light:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "shockwave"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:damage")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.99797 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/CollisionShape2D:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 11.5, 120.0 ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Area2D/Shockwave:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.045, -0.25, 0, 0.25, 0, 0.48, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 4 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Area2D/Shockwave:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.045, -0.25, 0, 0.25, 0, 0.48, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 4 )
}

[sub_resource type="CircleShape2D" id=4]
radius = 11.5

[node name="Bomb" type="RigidBody2D"]
collision_layer = 2
gravity_scale = 0.0
continuous_cd = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
editor/display_folded = true
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Light" type="Sprite" parent="Sprite"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/countdown = SubResource( 2 )
anims/shockwave = SubResource( 3 )

[node name="ExplodeTimer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="Shockwave" type="Sprite" parent="Area2D"]
visible = false
scale = Vector2( 0.045, 0.045 )
texture = ExtResource( 4 )

[node name="InivincibleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_ExplodeTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
